--- a/main.html
+++ b/main.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="styles.css">
+	<title>Document</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<div class="container">
+		<div class="green"></div>
+		<div class="yellow"></div>
+		<div class="red"></div>
+	</div>
 </body>
-
 </html>
